@@ -1,3 +1,10 @@
+2008-10-06  Dan Williams  <dcbw@redhat.com>
+
+	* src/connection-editor/page-mobile.c
+	  src/connection-editor/ce-page-mobile.glade
+		- Hide Network Type and Band items because they won't be supported until
+			ModemManager support lands
+
 2008-10-04  Dan Williams  <dcbw@redhat.com>
 
 	* src/wireless-dialog.c
